--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 name = "melon"
 version = "0.1.0"
 authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
+license = "GPL-3.0"
 
 [dependencies]
-serde = "^1.0"
-serde_derive = "^1.0"
-error-chain = "0.11.0"
+serde = "1"
+serde_derive = "1"
+failure = "^0.1"
+byteorder = "1"
