Adjusted tag line

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "melon"
 version = "0.1.0"
 authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
+description = "A library for creating retro computing platforms"
 license = "GPL-3.0"
 
 [dependencies]
