Prepared crate for publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "melon"
 version = "0.1.0"
 authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
 description = "A library for creating retro computing platforms"
+repository = "https://github.com/bakervm/melon"
+readme = "README.md"
 license = "GPL-3.0"
 
 [dependencies]
