--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ addons:
       - libssl-dev
 cache: cargo
 rust:
-  - 1.22.1
   - stable
   - beta
   - nightly
@@ -20,7 +19,7 @@ script:
 - cargo test --verbose
 
 after_success: |
-  if [[ "$TRAVIS_RUST_VERSION" == "1.22.1" ]]; then
+  if [[ "$TRAVIS_RUST_VERSION" == stable ]]; then
     bash <(curl https://raw.githubusercontent.com/xd009642/tarpaulin/master/travis-install.sh)
 
     # Uncomment the following two lines create and upload a report for codecov.io
