--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "GPL-3.0"
 
 [dependencies]
 byteorder = "1"
-failure = "^0.1"
+failure = "0.1"
 serde = "1"
 serde_derive = "1"
-rand = "0.4.2"
+rand = "0.4"
