--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,11 @@ readme = "README.md"
 license = "GPL-3.0"
 
 [dependencies]
-byteorder = "1"
-failure = "0.1"
-serde = "1"
-serde_derive = "1"
-rand = "0.4"
-rmp-serde = "0.13"
-
-[package.metadata.release]
-tag-prefix = "v"
-tag-message = "released version {{version}}"
-pre-release-commit-message = "Release {{version}} 🎉🎉"
-pre-release-hook = [ "cargo", "test" ]
-no-dev-version = true
+byteorder = "1.2.1"
+failure = "0.1.1"
+serde = "1.0.36"
+serde_derive = "1.0.36"
+rand = "0.4.2"
+rmp-serde = "0.13.7"
+flate2 = "1.0.1"
+rand_derive = "0.3.1"
