--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,14 @@ license = "MIT"
 [dependencies]
 byteorder = "1.2.2"
 failure = "0.1.1"
-serde = "1.0.37"
-serde_derive = "1.0.37"
+serde = "1.0.38"
+serde_derive = "1.0.38"
 rand = "0.4.2"
 rmp-serde = "0.13.7"
 flate2 = "1.0.1"
 rand_derive = "0.3.1"
+structopt = "0.2.7"
+
+[[bin]]
+name = "melon-dbg"
+path = "dbg/main.rs"
