Another great refactor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,15 @@ readme = "README.md"
 license = "MIT"
 
 [dependencies]
-byteorder = "1.2.2"
-failure = "0.1.1"
-serde = "1.0.38"
-serde_derive = "1.0.38"
-rand = "0.4.2"
-rmp-serde = "0.13.7"
-flate2 = "1.0.1"
-rand_derive = "0.3.1"
-structopt = "0.2.7"
+byteorder = "^1.2"
+failure = "^0.1"
+serde = "1"
+serde_derive = "1"
+rand = "^0.4"
+rmp-serde = "^0.13"
+flate2 = "1"
+rand_derive = "^0.3"
+structopt = "^0.2"
 
 [[bin]]
 name = "melon-dbg"
