--- a/release.toml
+++ b/release.toml
@@ -1,5 +1,5 @@
 tag-prefix = "v"
-tag-message = "released version {{version}}"
-pre-release-commit-message = "Release {{version}} 🎉🎉"
+tag-message = "Released {{version}}"
+pre-release-commit-message = "Release {{version}}"
 pre-release-hook = [ "cargo", "test" ]
 no-dev-version = true
