back to stable tarpaulin

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,11 @@ script:
 - cargo clean
 - cargo build
 - cargo test
-- RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin --git https://github.com/xd009642/tarpaulin --branch develop || true
 
 after_success: |
   if [[ "$TRAVIS_RUST_VERSION" == stable ]]; then
-    # Uncomment the following two lines create and upload a report for codecov.io
+    bash <(curl https://raw.githubusercontent.com/xd009642/tarpaulin/master/travis-install.sh)
+
     cargo tarpaulin --out Xml
     bash <(curl -s https://codecov.io/bash)
   fi
