--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,72 @@
-language: rust
-sudo: required
-dist: trusty
+# language: rust
+# sudo: required
+# dist: trusty
+#
+# addons:
+#   apt:
+#     packages:
+#       - libssl-dev
+#
+# cache: cargo
+#
+# rust:
+#   - stable
+#   - beta
+#   - nightly
+#
+# matrix:
+#   allow_failures:
+#     - rust: nightly
+#
+# before_cache: |
+#   if [[ "$TRAVIS_RUST_VERSION" == nightly ]]; then
+#     RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
+#   fi
+#
+# script:
+#   - cargo clean
+#   - cargo build
+#   - cargo test
+#
+# after_success: |
+#   if [[ "$TRAVIS_RUST_VERSION" == nightly ]]; then
+#     cargo tarpaulin --out Xml
+#     bash <(curl -s https://codecov.io/bash)
+#   fi
+#
 
-addons:
-  apt:
-    packages:
-      - libssl-dev
+branches:
+  only:
+    - master
 
-cache: cargo
-
-rust:
-  - stable
-  - beta
-  - nightly
-
-matrix:
-  allow_failures:
-    - rust: nightly
-
-before_cache: |
-  if [[ "$TRAVIS_RUST_VERSION" == nightly ]]; then
-    RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
-  fi
-
-script:
-  - cargo clean
-  - cargo build
-  - cargo test
-
-after_success: |
-  if [[ "$TRAVIS_RUST_VERSION" == nightly ]]; then
-    cargo tarpaulin --out Xml
-    bash <(curl -s https://codecov.io/bash)
-  fi
+jobs:
+  include:
+    - name: "Windows build"
+      os: windows
+      language: rust
+      rust:
+        - stable
+        - beta
+        - nightly
+      script:
+        - cargo build --verbose --all
+        - cargo test --verbose --all
+    - name: "macOS build"
+      os: osx
+      rust:
+        - stable
+        - beta
+        - nightly
+      script:
+        - cargo build --verbose --all
+        - cargo test --verbose --all
+    - name: "Ubuntu build"
+      os: linux
+      dist: trusty
+      rust:
+        - stable
+        - beta
+        - nightly
+      script:
+        - cargo build --verbose --all
+        - cargo test --verbose --all
