--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,8 @@ jobs:
       os: linux
       dist: trusty
       rust: nightly
-      install: RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
-      script:
+      before_cache: RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
+      script: true
+      after_success:
         - cargo tarpaulin --out Xml
         - bash <(curl -s https://codecov.io/bash)
