--- a/.travis.yml
+++ b/.travis.yml
@@ -1,35 +1,48 @@
 language: rust
-sudo: required
-dist: trusty
-
-addons:
-  apt:
-    packages:
-      - libssl-dev
 
 cache: cargo
 
-rust:
-  - stable
-  - beta
-  - nightly
+branches:
+  only:
+    - master
 
-matrix:
-  allow_failures:
-    - rust: nightly
+stages:
+  - test
+  - coverage
 
-before_cache: |
-  if [[ "$TRAVIS_RUST_VERSION" == nightly ]]; then
-    RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
-  fi
-
-script:
-  - cargo clean
-  - cargo build
-  - cargo test
-
-after_success: |
-  if [[ "$TRAVIS_RUST_VERSION" == nightly ]]; then
-    cargo tarpaulin --out Xml
-    bash <(curl -s https://codecov.io/bash)
-  fi
+jobs:
+  include:
+    - name: "Windows build"
+      os: windows
+      rust: stable
+      script:
+        - cargo build --verbose
+        - cargo test --verbose
+    - name: "macOS build"
+      os: osx
+      rust: stable
+      script:
+        - cargo build --verbose
+        - cargo test --verbose
+    - name: "Ubuntu build"
+      os: linux
+      dist: trusty
+      rust: stable
+      script:
+        - cargo build --verbose
+        - cargo test --verbose
+    - name: "Code coverage"
+      stage: coverage
+      os: linux
+      sudo: required
+      dist: trusty
+      addons:
+        apt:
+          packages:
+            - libssl-dev
+      rust: nightly
+      before_cache: RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
+      script: true
+      after_success:
+        - cargo tarpaulin --out Xml
+        - bash <(curl -s https://codecov.io/bash)
