--- a/.travis.yml
+++ b/.travis.yml
@@ -34,14 +34,14 @@ jobs:
     - name: "Code coverage"
       stage: coverage
       os: linux
-      sudo: required
+      sudo: true
       dist: trusty
       addons:
         apt:
           packages:
             - libssl-dev
       rust: nightly
-      before_cache: RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
+      before_cache: RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin -f
       script: true
       after_success:
         - cargo tarpaulin --out Xml
