--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = "A library for creating retro computing platforms"
 repository = "https://github.com/bakervm/melon"
 readme = "README.md"
 license = "MIT"
+edition = "2018"
 
 [dependencies]
 byteorder = "^1.2"
