--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,19 +9,19 @@ license = "MIT"
 edition = "2018"
 
 [dependencies]
-byteorder = "^1.2"
-failure = "^0.1"
-serde = "^1.0"
-serde_derive = "^1.0"
-rand = "^0.6"
-rmp-serde = "^0.13"
-flate2 = "^1.0"
-structopt = "^0.2"
-rustyline = "^3.0"
-colored = "^1.6"
-semver = { version = "^0.9", features = ["serde"] }
-lazy_static = "^1.2"
+byteorder = "1.3.1"
+failure = "0.1.5"
+serde = "1.0.87"
+serde_derive = "1.0.87"
+rand = "0.6.5"
+rmp-serde = "0.13.7"
+flate2 = "1.0.6"
+structopt = "0.2.14"
+rustyline = "3.0.0"
+colored = "1.7.0"
+semver = { version = "0.9.0", features = ["serde"] }
+lazy_static = "1.2.0"
 bytesize = "1.0.0"
 
 [dev-dependencies]
-tempfile = "^3.0"
+tempfile = "3.0.5"
