--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ colored = "1.9.3"
 semver = { version = "0.9.0", features = ["serde"] }
 lazy_static = "1.4.0"
 bytesize = "1.0.0"
+rand_derive = "0.5.0"
 
 [dev-dependencies]
 tempfile = "3.1.0"
