--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,12 @@ edition = "2018"
 [dependencies]
 byteorder = "1.3.4"
 failure = "0.1.7"
-serde = "1.0.104"
-serde_derive = "1.0.104"
+serde = { version = "1.0.106", features = ["derive"] }
 rand = "0.7.3"
 rmp-serde = "0.14.3"
-flate2 = "1.0.13"
-structopt = "0.3.11"
-rustyline = "6.0.0"
+flate2 = "1.0.14"
+structopt = "0.3.13"
+rustyline = "6.1.0"
 colored = "1.9.3"
 semver = { version = "0.9.0", features = ["serde"] }
 lazy_static = "1.4.0"
